Fix bug where preloading is visible in IE 11
VIctor-GT's suggestion (see
<https://github.com/artpolikarpov/fotorama/issues/290>) seems to fix
this issue. Thanks!

--- a/src/scss/fotorama.scss
+++ b/src/scss/fotorama.scss
@@ -111,8 +111,12 @@ $blue: mix(#00d1ff, #008ed6);
   @extend %stretch;
   @extend %no-tap;
   overflow: hidden;
+  display: none;
   &.fotorama__active {
     z-index: 8;
+  }
+  &.fotorama__loaded {
+    display: block;
   }
 }
 
